--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -255,6 +255,13 @@
       <div class="sidebar">
 
         <!-- <h3 class="lt-title">Headline</h3> -->
+        <div class="headline">
+          <img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" alt="">
+          <div class="headline-text">
+            <a href="{% url 'OnePlus_nord'%}"><h6 class="headline-title">OnePlus Nord full specification</h6></a>
+            <p class="headline-date">23 July 2020</p>
+          </div>
+        </div>
         <!-- 1 -->
         <div class="headline">
           <img src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" alt="">
@@ -265,7 +272,7 @@
         </div>
         <!-- 1 -->
         <div class="headline">
-          <img src="{% static 'image/mobile\10k\redmi-8.jpg'%}" alt="">
+          <img src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" alt="">
           <div class="headline-text">
             <a href="{% url 'mobile10k'%}"><h6 class="headline-title">Best smartphone under 10,000-INR</h6></a>
             <p class="headline-date">6 July 2020</p>
