--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -258,7 +258,7 @@
         <div class="headline">
           <img src="{% static 'image/mobile/oneplus/oneplus-nord-2.jpg' %}" alt="">
           <div class="headline-text">
-            <a href="{% url 'OnePlus_nord'%}"><h6 class="headline-title">OnePlus Nord full specification</h6></a>
+            <a href="{% url 'OnePlus_nord'%}"><h6 class="headline-title">Oneplus released new smartphone Oneplus nord at 24,999-INR </h6></a>
             <p class="headline-date">23 July 2020</p>
           </div>
         </div>
