--- a/limbo/affiliate/templates/page/about_page.html
+++ b/limbo/affiliate/templates/page/about_page.html
@@ -127,9 +127,9 @@
                   <h3 class="title">Rohit Raj</h3>
                   <span class="post">Web Developer</span>
                   <ul class="icon">
-                      <li><a href="#" class="fab fa-facebook"></a></li>
-                      <li><a href="#" class="fab fa-instagram"></a></li>
-                      <li><a href="#" class="fab fa-twitter"></a></li>
+                      <li><a href="https://www.facebook.com/rohitraj.kumar.7739" class="fab fa-facebook"></a></li>
+                      <li><a href="https://www.instagram.com/rohit_raj0036/?hl=en" class="fab fa-instagram"></a></li>
+                      <li><a href="https://twitter.com/hipein1" class="fab fa-twitter"></a></li>
                       <li><a href="#" class="fab fa-linkedin-in"></a></li>
                   </ul>
               </div>
@@ -141,8 +141,8 @@
                   <h3 class="title">Aman Acharya</h3>
                   <span class="post">Web Designer</span>
                   <ul class="icon">
-                      <li><a href="#" class="fab fa-facebook"></a></li>
-                      <li><a href="#" class="fab fa-instagram"></a></li>
+                      <li><a href="https://www.facebook.com/aman.acharya.7" class="fab fa-facebook"></a></li>
+                      <li><a href="https://www.instagram.com/aman_acharya_0307/?hl=en" class="fab fa-instagram"></a></li>
                       <li><a href="#" class="fab fa-twitter"></a></li>
                       <li><a href="#" class="fab fa-linkedin-in"></a></li>
                   </ul>
@@ -155,8 +155,8 @@
                 <h3 class="title">Sandeep Kumar</h3>
                 <span class="post">Creative Designer</span>
                 <ul class="icon">
-                    <li><a href="#" class="fab fa-facebook"></a></li>
-                    <li><a href="#" class="fab fa-instagram"></a></li>
+                    <li><a href="https://www.facebook.com/badboysandeepkr" class="fab fa-facebook"></a></li>
+                    <li><a href="https://www.instagram.com/badboysandeep/?hl=en" class="fab fa-instagram"></a></li>
                     <li><a href="#" class="fab fa-twitter"></a></li>
                     <li><a href="#" class="fab fa-linkedin-in"></a></li>
                 </ul>
