--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -305,9 +305,9 @@
         <aside class="aside">
           <h4>Follow Us</h4>
           <div class="social-link">
-            <a href="#" class="fa fa-facebook social social-fb"></a>
-            <a href="#" class="fa fa-instagram social social-insta"></a>
-            <a href="#" class="fa fa-twitter social social-twit"></a>
+            <a href="https://www.facebook.com/hipeinIndia/" class="fa fa-facebook social social-fb"></a>
+            <a href="https://www.instagram.com/?hl=en" class="fa fa-instagram social social-insta"></a>
+            <a href="https://twitter.com/hipein1" class="fa fa-twitter social social-twit"></a>
           </div>
           <h4 class="Category">Categories</h4>
           <div class="cat-link">
@@ -327,8 +327,8 @@
       <div class="footer_info">
         <a href="{% url 'home' %}"><img style="width: 150px; margin-left: -13px;" src="{% static 'image/logo/logo.png'%}" alt=""></a>
         <p class="footer_about">Our Foremost motive is to serve you with correct product  review and price info. So, that this marketing arrangement can generate you with honest purchases.</p>
-        <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-        <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/hipeinIndia/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://www.instagram.com/?hl=en"><i class="fa fa-instagram" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
       </div>
