--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -52,9 +52,9 @@
             </ul>
             <div class="aff-link1">
               <form action="https://www.flipkart.com/poco-f1-armoured-edition-128-gb/p/itmfbyd6nzexrpgk?pid=MOBFBYD6HGFZUNKS&lid=LSTMOBFBYD6HGFZUNKSHYEIGK&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=storage&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na">
-                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+                <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=poco+f1&sid=tyy%2C4io&as=on&as-show=on&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na&otracker1=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na&as-pos=1&as-type=HISTORY&suggestionId=poco+f1%7CMobiles&requestId=5fd78d63-dd7a-41e2-b069-cb51278fe7a0">
+              <form action="https://www.flipkart.com/search?q=pcoc%20f1&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
