--- a/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
+++ b/limbo/affiliate/templates/blog/pubg_mobile/pubg.html
@@ -54,7 +54,7 @@
               <form action="https://www.flipkart.com/poco-f1-armoured-edition-128-gb/p/itmfbyd6nzexrpgk?pid=MOBFBYD6HGFZUNKS&lid=LSTMOBFBYD6HGFZUNKSHYEIGK&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=storage&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=pcoc%20f1&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+              <form action="https://www.flipkart.com/poco-f1-armoured-edition-128-gb/p/itmfbyd6nzexrpgk?pid=MOBFBYD6HGFZUNKS&lid=LSTMOBFBYD6HGFZUNKSHYEIGK&marketplace=FLIPKART&sattr[]=color&sattr[]=storage&sattr[]=ram&st=storage&otracker=AS_QueryStore_OrganicAutoSuggest_1_7_na_na_na">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -117,7 +117,7 @@
               <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=redmi+note+9+pro&qid=1594824014&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/s?k=redmi+note+9+pro&ref=nb_sb_noss_2">
+              <form action="https://www.amazon.in/Test-Exclusive-549/dp/B077PWBC78/ref=sr_1_1?dchild=1&keywords=redmi+note+9+pro&qid=1594824014&sr=8-1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -216,7 +216,7 @@
               <form action="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X4PKGSN/ref=sr_1_1?crid=1APT739K268VB&dchild=1&keywords=note+8+pro+redmi&qid=1594824123&sprefix=note+%2Caps%2C451&sr=8-1">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
               </form>
-              <form action="https://www.amazon.in/s?k=note+8+pro+redmi&crid=1APT739K268VB&sprefix=note+%2Caps%2C451&ref=nb_sb_ss_ts-o-p_1_5">
+              <form action="https://www.amazon.in/Redmi-Note-Pro-Storage-Processor/dp/B07X4PKGSN/ref=sr_1_1?crid=1APT739K268VB&dchild=1&keywords=note+8+pro+redmi&qid=1594824123&sprefix=note+%2Caps%2C451&sr=8-1">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
@@ -247,7 +247,7 @@
               <form action="https://www.flipkart.com/realme-5-pro-sparkling-blue-128-gb/p/itmfj9twdugyvg77?pid=MOBFJ9TWAEBGAYFR&lid=LSTMOBFJ9TWAEBGAYFRGDVJVR&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d44a9a8c-a2f2-415f-9ee6-3c6d29e58c57.MOBFJ9TWAEBGAYFR.SEARCH&ppt=sp&ppn=sp&ssid=wb9h0xta680000001594824150931&qH=0e144ab94d3ed3b">
                 <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
               </form>
-              <form action="https://www.flipkart.com/search?q=realme%205%20pro&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off" class="affilated-link_flipcart">
+              <form action="https://www.flipkart.com/realme-5-pro-sparkling-blue-128-gb/p/itmfj9twdugyvg77?pid=MOBFJ9TWAEBGAYFR&lid=LSTMOBFJ9TWAEBGAYFRGDVJVR&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=d44a9a8c-a2f2-415f-9ee6-3c6d29e58c57.MOBFJ9TWAEBGAYFR.SEARCH&ppt=sp&ppn=sp&ssid=wb9h0xta680000001594824150931&qH=0e144ab94d3ed3b" class="affilated-link_flipcart">
                 <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
               </form>
             </div>
