--- a/limbo/affiliate/templates/mobile/apple/11 pro max/11 pro max.html
+++ b/limbo/affiliate/templates/mobile/apple/11 pro max/11 pro max.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Apple released his new smartphone 11 Pro Max at price of 1,17,100-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="apple 11 pro max, iphone 11 pro max, apple 11 pro max review, , iphone 11 pro max specification, iphone 11 pro max price in india, apple mobile phones youtube review"> {% endblock key%}
   {% load static %}
   {% block style %}
@@ -13,7 +13,7 @@
    </style>
    {% endblock style %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple 11Pro Max Full specification: hipein.com{% endblock title%}
+    {% block title%}Apple 11 Pro Max(4/64GB) Full specification - hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
