--- a/limbo/affiliate/templates/mobile/apple/11/11.html
+++ b/limbo/affiliate/templates/mobile/apple/11/11.html
@@ -1,16 +1,16 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Apple released his new smartphone iphone 11 at price of 68,300-INR, buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone 11 price in india, iphone 11 reviews, iphone 11 specification, apple mobiles "> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple 11 Full specification{% endblock title%}
+    {% block title%}Apple 11 (4/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
     <div class="wrapper">
       <div class="main">
         <div class="headline2">
-          <h4 class="content">Apple released his new smartphone iphone 11 at price of 68,300</h4>
+          <h4 class="content">Apple released his new smartphone iphone 11 at price of 68,300-INR</h4>
           <h2 class="content_tittle"><span>REVIEW</span> iphone 11 : 4/64GB for 68,300 Watch Full review-<a href="https://www.youtube.com/watch?v=y7RbFKVpWF0">http://www.youtube.com </a></h2>
         </div>
         <div >
