--- a/limbo/affiliate/templates/mobile/apple/7 plus/7plus.html
+++ b/limbo/affiliate/templates/mobile/apple/7 plus/7plus.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Apple released his new smartphone iphone 7 Plus at price of 36,999-INR,  buy at best price from amazon. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone 7 plus, iphone 7 plus reviews, iphone 7 plus specification, iphone 7 plus price in india, iphone 7 plus price"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple 7Plus Full specification{% endblock title%}
+    {% block title%}Apple 7 Plus Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
