--- a/limbo/affiliate/templates/mobile/apple/7/7.html
+++ b/limbo/affiliate/templates/mobile/apple/7/7.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from flipkart. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="iphone 7 : 2/32GB and specification, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone 7, iphone 7 reviews, iphone 7 specification, iphone 7 price in india, iphone 7 price"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple 7 Full specification{% endblock title%}
+    {% block title%}iphone 7 : 2/32GB Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -24,7 +24,7 @@
             <form action="https://www.flipkart.com/apple-iphone-7-black-32-gb/p/itmen6daftcqwzeg?pid=MOBEMK62PN2HU7EE&lid=LSTMOBEMK62PN2HU7EEF7TO4A&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0ed476e3-1c36-42b3-94e9-a0df86642344.MOBEMK62PN2HU7EE.SEARCH&ppt=sp&ppn=sp&ssid=ypzwk46rpc0000001594879572356&qH=8a650ef60fa6e469">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=Apple%207&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+            <form action="https://www.flipkart.com/apple-iphone-7-black-32-gb/p/itmen6daftcqwzeg?pid=MOBEMK62PN2HU7EE&lid=LSTMOBEMK62PN2HU7EEF7TO4A&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=0ed476e3-1c36-42b3-94e9-a0df86642344.MOBEMK62PN2HU7EE.SEARCH&ppt=sp&ppn=sp&ssid=ypzwk46rpc0000001594879572356&qH=8a650ef60fa6e469">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
