--- a/limbo/affiliate/templates/mobile/apple/se/SE.html
+++ b/limbo/affiliate/templates/mobile/apple/se/SE.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from flipkart. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Apple released his new smartphone iphone SE at price of 42,500-INR, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone se review, iphone se full specification, iphone se price in india,"> {% endblock key%}
   {% load static %}
   {% block style %}
@@ -13,7 +13,7 @@
    </style>
    {% endblock style %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple SE Full specification{% endblock title%}
+    {% block title%}Apple SE (3/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -37,7 +37,7 @@
             <form action="https://www.flipkart.com/apple-iphone-se-black-64-gb/p/itm832dd5963a08d?pid=MOBFRFXHCKWDAC4A&lid=LSTMOBFRFXHCKWDAC4AEQROVZ&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bde54ffa-9b04-4fc9-9b0a-c0c5f0f5b823.MOBFRFXHCKWDAC4A.SEARCH&ppt=sp&ppn=sp&ssid=q8iq0py3680000001594879019988&qH=72cf29aedb578aec">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=Apple%20SE&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+            <form action="https://www.flipkart.com/apple-iphone-se-black-64-gb/p/itm832dd5963a08d?pid=MOBFRFXHCKWDAC4A&lid=LSTMOBFRFXHCKWDAC4AEQROVZ&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=bde54ffa-9b04-4fc9-9b0a-c0c5f0f5b823.MOBFRFXHCKWDAC4A.SEARCH&ppt=sp&ppn=sp&ssid=q8iq0py3680000001594879019988&qH=72cf29aedb578aec">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
