--- a/limbo/affiliate/templates/mobile/apple/x/x.html
+++ b/limbo/affiliate/templates/mobile/apple/x/x.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from flipkart. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Apple released his new smartphone iphone X at price of 79,990-INR, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone x, iphone x reviews, iphone x specification, iphone x price in india, iphone x price"> {% endblock key%}
   {% load static %}
   {% block style %}
@@ -13,7 +13,7 @@
    </style>
    {% endblock style %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple X Full specification: hipein.com{% endblock title%}
+    {% block title%}Apple X (3/256GB) Full specification: hipein.com{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -34,7 +34,7 @@
             <form action="https://www.flipkart.com/apple-iphone-x-silver-256-gb/p/itmexrgv4cgmrxxp?pid=MOBEXRGVVTMF9FYV&lid=LSTMOBEXRGVVTMF9FYVWVE8YG&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=203d68b0-5c5b-4c67-91af-22dd842ed425.MOBEXRGVVTMF9FYV.SEARCH&ppt=sp&ppn=sp&ssid=5dak4ikqkw0000001594879137612&qH=f343a4633184ab46">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=Apple%20x&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+            <form action="https://www.flipkart.com/apple-iphone-x-silver-256-gb/p/itmexrgv4cgmrxxp?pid=MOBEXRGVVTMF9FYV&lid=LSTMOBEXRGVVTMF9FYVWVE8YG&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=203d68b0-5c5b-4c67-91af-22dd842ed425.MOBEXRGVVTMF9FYV.SEARCH&ppt=sp&ppn=sp&ssid=5dak4ikqkw0000001594879137612&qH=f343a4633184ab46">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
