--- a/limbo/affiliate/templates/mobile/apple/xr/xr.html
+++ b/limbo/affiliate/templates/mobile/apple/xr/xr.html
@@ -1,5 +1,5 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from flipkart. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="Apple released his new smartphone iphone XR at price of 52,500-INR, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone xr, iphone xr reviews, iphone xr specification, iphone xr price in india, iphone xr price"> {% endblock key%}
     {% load static %}
     {% block style %}
@@ -13,7 +13,7 @@
      </style>
      {% endblock style %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple XR Full specification: hipein.com{% endblock title%}
+    {% block title%}Apple XR (3/64GB) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
@@ -35,7 +35,7 @@
             <form action="https://www.flipkart.com/apple-iphone-xr-white-256-gb/p/itmf9z7zsx9keyup?pid=MOBF9Z7ZEHAGRKZC&lid=LSTMOBF9Z7ZEHAGRKZCAQAGGA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=84b26bfd-4548-44bc-808c-abbb942bf7f9.MOBF9Z7ZEHAGRKZC.SEARCH&ppt=sp&ppn=sp&ssid=t00r583yg00000001594879708268&qH=868ed02c58567157">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
             </form>
-            <form action="https://www.flipkart.com/search?q=iphone%20XR&otracker=search&otracker1=search&marketplace=FLIPKART&as-show=on&as=off">
+            <form action="https://www.flipkart.com/apple-iphone-xr-white-256-gb/p/itmf9z7zsx9keyup?pid=MOBF9Z7ZEHAGRKZC&lid=LSTMOBF9Z7ZEHAGRKZCAQAGGA&marketplace=FLIPKART&srno=s_1_1&otracker=search&otracker1=search&fm=SEARCH&iid=84b26bfd-4548-44bc-808c-abbb942bf7f9.MOBF9Z7ZEHAGRKZC.SEARCH&ppt=sp&ppn=sp&ssid=t00r583yg00000001594879708268&qH=868ed02c58567157">
               <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
             </form>
           </div>
