--- a/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
+++ b/limbo/affiliate/templates/mobile/oneplus/oneplus_nord/oneplus nord.html
@@ -1,8 +1,8 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Realme smartphone: New smartphone review and specification, buy at best price from amazon. "> {% endblock desc%}
+{% block desc%}<meta name="description" content="OnePlus released his new smartphone OnePlus nord 5G at price of 24,999-INR, Releasing on 4th August 2020 . "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="oneplus nord specification, oneplus nord release date, oneplus nord price, oneplus nord price in india, oneplus nord feature"> {% endblock key%}
   {% load static %}
-    {% block title%}OnePlus nord 5G full specification - hipein{% endblock title%}
+    {% block title%}OnePlus nord 5G (6/64GB) full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
