--- a/limbo/affiliate/templates/mobile/apple/8/8.html
+++ b/limbo/affiliate/templates/mobile/apple/8/8.html
@@ -1,9 +1,9 @@
 {% extends 'page/bas.html' %}
-{% block desc%}<meta name="description" content="Apple smartphone: New smartphone review and specification, buy at best price from flipkart. "> {% endblock desc%}
+{% block desc%}<meta name="description" content=" iphone 8 : 2/64GB for 38,999-INR review and specification, buy at best price from flipkart. "> {% endblock desc%}
 {% block key%}<meta name="keywords" content="iphone 8, iphone 8 reviews, iphone 8 specification, iphone 8 price in india, iphone 8 price"> {% endblock key%}
   {% load static %}
    {% block css%} <link rel="stylesheet" href="{% static 'pageCss/Mobile/mobileSpecCss.css' %}">{% endblock css%}
-    {% block title%}Apple 8 Full specification: hipein.com{% endblock title%}
+    {% block title%}Apple 8 (2/64GB ) Full specification - hipein{% endblock title%}
     {% block actmob%} class="active"{% endblock actmob%}
     {% block content%}
     <!-- review and spec -->
